[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Resemblyzer"
version = "0.1.4"
description = "Analyze and compare voices with deep learning"
readme = "README.md"
requires-python = ">=3.5"
license = { file = "LICENSE" }
authors = [{ name = "Corentin Jemine", email = "corentin@resemble.ai" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "librosa>=0.9.1",
    "numpy>=1.20.0",
    "webrtcvad>=2.0.10",
    "torch>=1.0.1",
    "scipy>=1.2.1",
    "typing",
]

[project.urls]
Homepage = "https://github.com/resemble-ai/Resemblyzer"

[tool.setuptools.packages.find]
include = ["resemblyzer*"]

[tool.setuptools.package-data]
resemblyzer = ["pretrained.pt"]
